@@ -185,6 +185,8 @@ if not "%LOGGING_MANAGER%" == "" goto noJuliManager
 set LOGGING_MANAGER=-Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager
 :noJuliManager
 set JAVA_OPTS=%JAVA_OPTS% %LOGGING_MANAGER%
+rem CONTENTBOX ADDITIONS
+set JAVA_OPTS=%JAVA_OPTS% -Xmx512m -Xmx512m -XX:MaxPermSize=192m -XX:PermSize=192m
 
 rem ----- Execute The Requested Command ---------------------------------------
 
